# voidmerge

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: docker.yml  tag-release.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  code.md  context.md  env.md  install-vm.md  logic.md  quick-start.md  usage-example.md  what-is.md
book/src/concepts/: cron.md  functions.md  messaging.md  object-store-validation.md  object-store.md
docker/voidmerge-server/: Dockerfile
docker/voidmerge-vm/: Dockerfile
rs/vm-js/: Cargo.toml  README.md
rs/vm-js/src/: alloc.rs  js_thread.rs  lib.rs  monitor.rs  test.rs
rs/voidmerge/: Cargo.toml  README.md
rs/voidmerge/examples/: example1-env.json  example1-logic.js
rs/voidmerge/src/: bytes_ext.rs  config.rs  context.rs  crypto.rs  ctx.rs  data.rs  error.rs  http_client.rs  http_server.rs  js.rs  lib.rs  memindex.rs  meter.rs  modules.rs  msg.rs  obj.rs  runtime.rs  server.rs  test.rs  types.rs
rs/voidmerge/src/crypto/: ed25519.rs  ml_dsa.rs  p256.rs  utils.rs
rs/voidmerge/src/js/: entry.js  unit_tests.rs
rs/voidmerge/src/js/unit_tests/: console.js  crypto.js  encoding.js  interval.js  timeout.js  url.js
rs/voidmerge/src/modules/: context_store_file.rs  logic_stub.rs  logic_v8.rs  runtime_store_json_file.rs  sign_p256.rs
rs/voidmerge/src/types/: encoding.rs  hash.rs  module_context_store.rs  module_logic.rs  module_runtime_store.rs  module_sign.rs  value.rs
rs/voidmerge/tests/: integration.rs
rs/voidmerge/tests/integration/: cron.rs  obj.rs  setup.rs
scripts/: file-gen.js
ts/demo/counter/: .gitignore  package.json  publish-example.bash  tsconfig.json
ts/demo/counter/src/: index.ts
ts/demo/post-quantum/: package.json
ts/demo/post-quantum/src/: index.ts
ts/demo/todo-leader/: package.json  tsconfig.json
ts/demo/todo-leader/src/: assets.ts  todo-code.ts
ts/demo/todo-leader/src/widgets/: emoji.ts  league-item.ts  league.ts  loading.ts  text.ts  todo.ts
ts/doc/: README.md  package.json
ts/doc/src/: index.ts
ts/example1/: example1-env.json  example1-logic.js  package.json  tsconfig.json
ts/example1/src/: index.ts
ts/test-integration/: package.json  tsconfig.json
ts/test-integration/src/: cron-simple.ts  msg-simple.ts  obj-simple.ts
ts/todo-leader/: package.json  tsconfig.json
ts/todo-leader/src/: assets.ts  avatar.ts  b64.ts  ident.ts  index.css  index.html  state.ts  todo-client.ts  todo-code.ts  widgets.ts
ts/todo-leader/src/widgets/: avatar.ts  cont.ts  emoji.ts  horiz.ts  label.ts  league.ts  main.ts  page.ts  text.ts  todo.ts  vert.ts  widget.ts
ts/voidmerge-client/: README.md  package.json
ts/voidmerge-client/src/: b64.ts  http-client.spec.ts  http-client.ts  index.spec.ts  index.ts  sign-p256.spec.ts  sign-p256.ts  types.spec.ts  types.ts  vm-node-test-server.ts  vm-test-helper.ts  void-merge-client.spec.ts  void-merge-client.ts
ts/voidmerge-code/: README.md  package.json
ts/voidmerge-code/src/: index.ts  obj-meta.spec.ts  obj-meta.ts  test-setup.ts
