[workspace]
members = [ "rs/voidmerge" ]
resolver = "3"

[workspace.package]
authors = ["Void Merge, LLC"]
version = "0.0.4"
edition = "2024"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.dependencies]
#app_dirs2 = "2.5.5"
axum = "0.8"
axum-server = "0.7"
base64 = "0.22.1"
bytes = "1.10"
clap = "4.5"
#digest = "0.10.7"
#ed25519-dalek = "2.2.0"
#fd-lock = "4.0.4"
#futures = "0.3.31"
#maplit = "1"
#mime_guess = "2.0.5"
#num_cpus = "1.17"
#oqs = { version = "0.11.0", default-features = false }
#p256 = "0.13"
#rand = "0.8.5"
reqwest = "0.12"
rmp-serde = "1.3"
rustyscript = { version = "0.12.3", default-features = false }
# TODO: remove this `<`: problems with swc_config
serde = "<1.0.222"
serde_json = "1"
#serde_v8 = "0.264"
#sha2 = "0.10"
#tempfile = "3.20.0"
tokio = "1"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
#v8 = "137"
#zeroize = "1.8"
#zip = "4.3.0"
