[workspace]
members = [ "rs/voidmerge" ]
resolver = "3"

[workspace.package]
authors = ["Void Merge, LLC"]
version = "0.0.8"
edition = "2024"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.dependencies]
axum = "0.8"
axum-server = "0.7"
base64 = "0.22.1"
bytes = "1.10"
deno_core = "0.355.0"
futures = "0.3.31"
hyper = "~1.7"
minimist = "0.1.1"
rand = "0.9.2"
reqwest = "0.12"
rmp-serde = "1.3"
rustyscript = { version = "0.12.3", default-features = false }
# TODO: remove this `<`: problems with swc_config
serde = "<1.0.222"
serde_json = "1"
sha2 = "0.10"
tempfile = "3.20.0"
tokio = "1"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xshell = "0.2.7"
zip = "4.3.0"
