[package]
name = "voidmerge"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "VoidMerge: The open-source, developer friendly web services platform."
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/voidmerge"
repository = "https://github.com/voidmerge/voidmerge"
keywords = [ "p2p", "verify", "verifiable" ]
categories = [ "database", "database-implementations", "network-programming", "web-programming" ]

[dependencies]
axum = { workspace = true, optional = true, features = [ "macros", "ws" ] }
axum-server = { workspace = true, optional = true }
base64 = { workspace = true }
bytes = { workspace = true, features = [ "serde" ] }
deno_core = { workspace = true }
futures = { workspace = true, optional = true }
hyper = { workspace = true }
minimist = { workspace = true, optional = true }
opentelemetry = { workspace = true, features = ["logs"], optional = true }
opentelemetry-appender-tracing = {  workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, features = ["logs"], optional = true }
opentelemetry_sdk = { workspace = true, features = ["logs"], optional = true }
rand = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
rustyscript = { version = "0.12.3", default-features = false, features = ["web_stub", "url", "crypto", "console"] }
serde = { workspace = true, features = [ "derive", "rc" ] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true, optional = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [ "sync", "fs", "rt", "io-util" ] }
tower-http = { workspace = true, optional = true, features = [ "cors" ] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true, features = [ "env-filter", "json" ] }
zip = { workspace = true, optional = true }

[dev-dependencies]
async-walkdir = "2.1.0"
tokio = { workspace = true, features = [ "full" ] }
xshell = { workspace = true }

[features]
default = [ "http-server", "cli" ]

# The http server types.
http-server = [ "dep:axum", "dep:axum-server", "dep:futures", "dep:tower-http" ]

# The cli tool.
cli = [ "tokio/full", "dep:minimist", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:opentelemetry-appender-tracing", "dep:sysinfo", "dep:tracing-subscriber", "dep:zip" ]

[package.metadata.docs.rs]
all-features = true
